yamls/hccl-controller-v2.0.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hccl-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hccl-controller
  template:
    metadata:
      labels:
        app: hccl-controller
    spec:
      nodeSelector:
        masterselector: dls-master-node
      serviceAccountName: hccl-controller
      containers:
        - name: hccl-controller
          image: hccl-controller:v2.0.1
          resources:
            requests:
              memory: 300Mi
              cpu: 500m
            limits:
              memory: 300Mi
              cpu: 500m
          imagePullPolicy: Never
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "umask 027;hccl-controller --logtostderr=false --log_dir=/var/log/atlas_dls/hccl-controller
         --log_file=/var/log/atlas_dls/hccl-controller/hccl-controller.log  --stderrthreshold=1 -v=5" ]
          volumeMounts:
            - name: device-hcclcontroller
              mountPath: /var/log/atlas_dls/hccl-controller
            - name: localtime
              mountPath: /etc/localtime
      volumes:
        - name: device-hcclcontroller
          hostPath:
            path: /var/log/atlas_dls/hccl-controller
        - name: localtime
          hostPath:
            path: /etc/localtime
